--- a/Data-analysis/NeSI-data-analysis.Rmd
+++ b/Data-analysis/NeSI-data-analysis.Rmd
@@ -9,7 +9,6 @@ output:
 ---
 
 
-
 ```{r setupenv, echo = FALSE, eval = TRUE}
 
 # Set up environment to read files:Need to 
@@ -18,19 +17,7 @@ output:
 #* check data has been read as a data.frame
 
 setwd("~/Desktop/GitHub/nesi-training/Data-analysis")
-#0setwd("~/Documents/GitHub/nesi-training/Data-analysis")
-
-reshed = read.csv("researchers-hed.csv") #HED institutions
-rescri = read.csv("researchers-cris.csv") #CRI data
-resdiscipline = read.csv("researchers-discipline.csv")
-rdsurvey2016 = read.csv("rd-2016.csv")
-
-#check it is a dataframe
-#class(reshed)
-#class(rescri)
-#class(resdiscipline)
-#class(rdsurvey2016)
-
+#setwd("~/Documents/GitHub/nesi-training/Data-analysis")
 
 library(ggplot2) #calls ggplot2 which should be installed
 library(plyr) #need it for counts
@@ -39,15 +26,66 @@ knitr::opts_chunk$set(fig.width=12, fig.height=8) # control figure size in outpu
 
 ```
 
+# Estimating the number of researchers per institution, per discipline
+
+Uses data for 2016 R&D survey (from stats.nz), data from 2012 PBRF, and CRI reporting documents to estimate the size of the workforce. Higher education institutions are tagged as heduni (for universities, under PBRF definition) or hedother, for non-university tertiary institutions that contribute to PBRF. 
+
+## R&D survey 2016
+Provides size of research workforce in Government, private business and higher education for years 2014 and 2016 as number of researchers and ftes (resarcher, student researcher, technician and support staff). The data is manually reorganised into rd-2016.csv.
+
+## PBRF data
+
+Uses PBRF reporting data for a list of higher education institutions and total number of funded Evidence Portfolios. The data is manually reorganized into 2 different files: 
+(1) researchers-hed.csv which contains all higher education institutions and their respective number of funded eps (by institution)
+(2) researchers-discipline.csv which contains all funded eps by the different top level PBRF research disciplines.
+
+## CRI data
+
+Uses CRI data obtained from annual reports to estimate the research workforce in each CRI. The data is very inhomogneous - (data collected in CRI Staff data.xlsx, and numbers 'chosen' from there)
+
+### Sources:
+rd-2016-tables.xlsx, tab 7 downloaded from (http://www.stats.govt.nz/browse_for_stats/businesses/research_and_development/info-releases.aspx)
+PBRF-2012-Supplement-Appendix-A-Part-1, tabs: Table A-1 and Table A-2 (http://www.tec.govt.nz/funding/funding-and-performance/funding/fund-finder/performance-based-research-fund/previous-quality-evaluation-rounds/)
+
+```{r workforce, echo=FALSE, eval=TRUE}
+reshed = read.csv("researchers-hed.csv") #HED institutions
+rescri = read.csv("researchers-cris.csv") #CRI data
+resdiscipline = read.csv("researchers-discipline.csv")
+rdsurvey2016 = read.csv("rd-2016.csv")
+
+#test files
+
+#check it is a dataframe
+if (is.data.frame(reshed) != TRUE){
+  cat("ERROR: reshed should be in a data frame, but it is not. ")
+} 
+if (is.data.frame(rescri) != TRUE) {
+  cat("ERROR: rescri should be in a data frame, but it is not. ")
+} 
+if (is.data.frame(resdiscipline) != TRUE) {
+  cat("ERROR: resdiscipline should be in a data frame, but it is not")
+}
+if (is.data.frame(rdsurvey2016) != TRUE) {
+  cat("ERROR: rdsurvey2016 should be in a data frame but it is not")
+} 
+
+```
+
 ## Worforce number in NZ 
 
-Estimate number/FTE of total researchers in each Higher Ed institution, by using the fraction of total funded EP portfolios in 2012 PBRF round, and the total values provided by stats.nz 2016 R&d survey. 
+As there are no direct numbers of researchers in each higher education institution or discipline, these numbers are estimated using the number of funded EPs in the 2012 PBRF round. The fraction of funded EPs per institution or per discipline is used to calculate the number of researchers from the total number of researchers in higher education provided in the government R&D 2016 survey. The R&D number used here is that under the role 'researcher', i.e., excludes technical staff, students, and support staff.
+
+ASSUMPTION: that the fraction of funded EPs across institutions and across disciplines is based on similar fractions of total PBRF eligible workforce. 
+
+The number of total tech/FTE in Higher Ed is estimated using the same same approach as above.
+
+ASSUMPTION: That the number of technical staff in each institution/discipline is proportional to the number of 'researcher' staff within institution. (this is probably unlikely?)
+
+The total number of technicians in CRIs is calculated from the total number of CRI staff (from government CRI review document) and the total number of technical staff (from the 2016 R&D survey).
+
+ASSUMPTION: that the proportion of staff in different roles is similar in all CRIs. 
 
 According to TEC there are 9 universities and a number of other HED institutions that contribute to the PBRF 2012. All these other HED institutions are grouped into one as "all other". 
-
-Estimate number of total tech/FTE in Higher Ed by institution by using same approach as above. 
-
-Estimate number of total tech in CRI by distributin tech number in gov (from R&D 2016 survey) and distributing proportionately based on total number of staff in each CRI.
 
 
 ```{r researchers, echo=FALSE, eval = TRUE}
@@ -56,11 +94,10 @@ Estimate number of total tech in CRI by distributin tech number in gov (from R&D
 #read from rd-2016.csv total eft and number of researchers
 
 #HED numbers
-
 hed.researcher.number <- as.numeric(rdsurvey2016$hed.number.2016[rdsurvey2016$role == "researcher"])
 hed.researcher.fte <-as.numeric(rdsurvey2016$hed.fte.2016[rdsurvey2016$role == "researcher"])
 hed.tech.number<-as.numeric(rdsurvey2016$hed.number.2016[rdsurvey2016$role == "technician"])
-hed.tech.fte<-as.numeric(rdsurvey2016$hed.number.2016[rdsurvey2016$role == "technician"])
+hed.tech.fte<-as.numeric(rdsurvey2016$hed.fte.2016[rdsurvey2016$role == "technician"])
 
 #gov numbers
 gov.tech.number<-as.numeric(rdsurvey2016$gov.number.2016[rdsurvey2016$role == "technician"])
@@ -69,19 +106,28 @@ gov.res.number <- as.numeric(rdsurvey2016$gov.number.2016[rdsurvey2016$role == "
 gov.res.fte <- as.numeric(rdsurvey2016$gov.fte.2016[rdsurvey2016$role == "researcher"])
 
 #split Universities from other tertiary institutions, then add other tertiary as a single line
+
 resheduni = subset(reshed, reshed$inst.category == "heduni")
 reshedother = subset(reshed, reshed$inst.category == "hedother")
 
+#Test all lines have been read
+if (nrow(reshed) != (nrow(resheduni) + nrow(reshedother))) {
+  cat("ERROR: didn't split HED files properly")
+}
+
+# create a new data frame that contains all universities plus all other HED in a single line, add numbers from all other hed institutions and put into a new line in reshedall
+
 reshedall<-as.data.frame(resheduni)
-reshedall[nrow(resheduni) + 1,] = NA
-levels(reshedall$institution) <- c(levels(reshedall$institution),"allother")
+reshedall[nrow(resheduni) + 1,] = NA #create a new line with NAs
+levels(reshedall$institution) <- c(levels(reshedall$institution),"allother") #need to create a new level
 reshedall$institution[nrow(reshedall)]<-"allother"
 reshedall$inst.category[nrow(reshedall)]<-"hedother"
 reshedall$funded.ep[reshedall$institution=="allother"] <-sum(reshedother$funded.ep)
 reshedall$student.fte[reshedall$institution=="allother"] <- sum(reshedother$student.fte)
 reshedall$student.number[reshedall$institution =="allother"] <- sum(reshedother$student.number)
 
-#Replace NA with 0
+#Replace NA with 0 - not a good idea -but was unable to deal with NAs
+
 reshedother[is.na(reshedother)] <- 0
 reshedall[is.na(reshedall)] <- 0
 rescri[is.na(rescri)]<-0
@@ -89,38 +135,43 @@ resdiscipline[is.na(resdiscipline)] <- 0
 
 #calculate total researchers per institution from funded eviedence porfolio numbers
 
-total.eps <-sum(reshed$funded.ep) #total number of funded eps should be 6311.41
-reshedall$percent.funded.ep <- reshedall$funded.ep * 100 /total.eps
+total.eps <-sum(reshedall$funded.ep) #total number of funded eps should be 6311.41
+if (total.eps != 6311.41) {
+  cat("ERROR: you don't have the right number of EPs in ")
+}
 
+reshedall$percent.funded.ep <- reshedall$funded.ep * 100 /total.eps
 reshedall$res.staff.number <- reshedall$percent.funded.ep * hed.researcher.number  /100
 reshedall$res.staff.fte <- reshedall$percent.funded.ep * hed.researcher.fte /100
-
 reshedall$tech.number <- reshedall$percent.funded.ep * hed.tech.number /100
 reshedall$tech.fte <- reshedall$percent.funded.ep * hed.tech.fte /100
 
 #caclulate total researchers per discipline from funded eviedence porfolio numbers
-#There is no tech number per discipline
+
+cat("There is no tech number per discipline. The number of techs per discipline in HED is calculated from percentage funded EPs and the R&D 2016 survey total number of technicians in the resarch workforce")
+
 
 resdiscipline$percent.funded.ep <- resdiscipline$funded.ep * 100 /total.eps
 resdiscipline$res.staff.number <- resdiscipline$percent.funded.ep * hed.researcher.number  /100
 resdiscipline$res.staff.fte <- resdiscipline$percent.funded.ep * hed.researcher.fte /100
-
 resdiscipline$tech.number <- as.numeric(resdiscipline$percent.funded.ep * hed.tech.number /100)
 resdiscipline$tech.fte <- resdiscipline$percent.funded.ep * hed.tech.fte /100
 
 #student numbers
+
 # from R&D 2016
-hed.student.number <- as.numeric(rdsurvey2016$hed.number.2016[rdsurvey2016$role == "researcher"])
+hed.student.number <- as.numeric(rdsurvey2016$hed.number.2016[rdsurvey2016$role == "student.researcher"])
 hed.student.fte<-as.numeric(rdsurvey2016$hed.fte.2016[rdsurvey2016$role == "student.researcher"])
 
-#From enrollments 2015
+#From enrollments 2015 - includes all MSc and PhD - not all of them (esp. MSc) would be involved in research
 hed.student.enrolled = sum(reshedall$student.number)
+
+cat("According to 2016 R&D survey, there are ", hed.student.number, "student researchers. According to enrolment numbers there are ", hed.student.enrolled, "in MSc + PhD. The discrepancy may be because probably not all MSc students would be necessarily involved in research. For the calculation of total workforce (students + researchers + technicians) I am using the total number of enrolled students. This means I am probably overestimating the size of the total workforce.")
 
 #Add students, researchers and techs to total column
 
 resdiscipline$total.number <- resdiscipline$res.staff.number + resdiscipline$student.number + resdiscipline$tech.number
 resdiscipline$total.fte <- resdiscipline$res.staff.fte + resdiscipline$student.fte + resdiscipline$tech.fte
-
 reshedall$total.number <- reshedall$res.staff.number + reshedall$student.number + reshedall$tech.number
 reshedall$total.fte <- reshedall$res.staff.fte + reshedall$student.fte + reshedall$tech.fte
 ```
@@ -144,11 +195,15 @@ rescri$nesi.learner.proportion = rescri$nesi.learner.total *100 / rescri$total.n
 
 ## Distribution of NeSi learners across institutions (total and per year)
 
-```{r plot distributions, echo=FALSE, eval = TRUE}
+ASSUMPTION: that learners are all different people, i.e., does not consider the possibility that the same person may have attended more than one event. 
+
+```{r plot learners, echo=FALSE, eval = TRUE}
+
+#Plots learners by institution (total and per year) separating HED and CRIs
 
 cat("Distribution of NeSi learners by HED institutions (all years) ")
 
-ggplot(reshedall, aes(x=reorder(institution,nesi.learner.total), y=nesi.learner.total)) +
+ggplot(reshedall, aes(x=reorder(institution, nesi.learner.total), y=nesi.learner.total)) +
   geom_bar(stat="identity") + 
   #ggtitle("# NeSI Learners by institution (HED)")+
   ylab("Total number of learners")+
@@ -185,7 +240,11 @@ ggplot(criperyear,aes(x = institution,y = value)) +
 
 ## NeSI learners as a proportion of workforce
 
-```{r nesi learner proportion, echo=FALSE, eval=TRUE}
+Since I am using all enrolled students as part of the calculation of total researhc workforce, these plots underestimate the proportion of the workforce that was engaged in NeSI learning. 
+
+ASSUMPTION: that learners are all different people, i.e., does not consider the possibility that the same person may have attended more than one event. 
+
+```{r learner proportion, echo=FALSE, eval=TRUE}
 cat("Proportion of NeSi learners by HED institutions (all years) ")
 
 ggplot(reshedall, aes(x=reorder(institution,nesi.learner.proportion), y=nesi.learner.proportion)) +
@@ -209,7 +268,9 @@ ggplot(rescrionly, aes(x=reorder(institution,nesi.learner.proportion), y=nesi.le
 
 ##Proportion of the workforce in different disciplines that use NeSI
 
-```{r nesi user proportion, echo=FALSE, eval=TRUE}
+I used the numbers displayed in the bubble plot from the NeSI 2016 report, and reorganize the discipline used in that plot to fit the PBRF disciplines (which are used to calculate the workforce per discipline). The workforce size is probably an overestimate as I am using number of enrolled MSasters and PhD students. 
+
+```{r user proportion, echo=FALSE, eval=TRUE}
 
 #calculate percent of nesi users per total estimated workforce
 # number nesi users *100 / total workforce
@@ -219,13 +280,13 @@ ggplot(rescrionly, aes(x=reorder(institution,nesi.learner.proportion), y=nesi.le
 discipline.nesi.users = sum(resdiscipline$nesi.users) 
 discipline.res.number = sum(resdiscipline$res.staff.number) + sum(resdiscipline$student.number) + sum(resdiscipline$tech.number)
 
-
 #total research workforce (per rd 2016) - No info about discipline
 #Need to recalculate this .....
 
 res.gov.2016 = gov.res.number + gov.tech.number
 res.hed.2016 = hed.researcher.number + hed.student.number + hed.tech.number
 hed.gov.2016 = res.gov.2016 + res.hed.2016 #HED + Government total users
+
 
 percent.nesi.users.gov.hed = discipline.nesi.users * 100 / hed.gov.2016
 percentage.nesi.users = discipline.nesi.users *100 /discipline.res.number
@@ -244,11 +305,11 @@ ggplot(resdiscipline, aes(x=reorder(discipline,nesi.percentage), y=nesi.percenta
 
 ```
 
-This is, however, an overestimation of the actual proportions since it assumes all NeSI users come from the HED sector. I am unable to find a breakdown of research force within CRIs that I can map onto disciplines. The only way around this would be to assume that the distribution across disciplines in the government and higher education are the same and break up the government data across those proportions - but this would probably be a really incorrect assumption. 
+This is, however, an overestimation of the actual proportions since it assumes all NeSI users come from the HED sector. I am unable to find a breakdown of research force within CRIs that I can map onto disciplines. The only way around this would be to assume that the distribution across disciplines in the government and higher education are the same and break up the government data across those proportions - but this would probably be a really incorrect assumption. I should be able to sort this once I have the raw nesi usage data. 
 
 # NeSI training activities
 
-```{r nesi training sessions, echo = FALSE, eval = TRUE}
+```{r training sessions, echo = FALSE, eval = TRUE}
 
 #read all nesi training events and separate into outreach and other types of training.
 nesi.training.all = read.csv("nesi-training.csv", dec = ",")
@@ -262,7 +323,7 @@ all.training.events <- unique(nesi.training.all$event.number)
 outreach.events <- unique(nesi.outreach$event.number)
 training.events <- unique(nesi.training$event.number)
 
-cat("There were ", length(all.training.events), "training events; of these" , length(outreach.events), "were outreach events and ", length(training.events), "were training events.")
+cat("There were ", length(all.training.events), "events; of these" , length(outreach.events), "were outreach events and ", length(training.events), "were training events.")
 ```
 
 
